--- a/package.json
+++ b/package.json
@@ -7,43 +7,43 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@mui/icons-material": "^5.1.0",
-    "@mui/material": "^5.1.0",
-    "@notionhq/client": "^2.2.3",
-    "gatsby": "^4.9.3",
-    "gatsby-plugin-advanced-sitemap": "^2.0.0",
-    "gatsby-plugin-google-analytics": "^4.9.0",
-    "gatsby-plugin-image": "^2.9.1",
-    "gatsby-plugin-manifest": "^4.9.1",
-    "gatsby-plugin-offline": "^5.9.1",
-    "gatsby-plugin-react-helmet": "^5.9.0",
-    "gatsby-plugin-robots-txt": "^1.7.0",
-    "gatsby-plugin-sass": "^5.9.0",
-    "gatsby-plugin-sharp": "^4.9.1",
-    "gatsby-remark-autolink-headers": "^5.9.0",
-    "gatsby-remark-copy-linked-files": "^5.9.0",
-    "gatsby-remark-images": "^6.9.1",
-    "gatsby-remark-prismjs": "^6.9.0",
-    "gatsby-remark-responsive-iframe": "^5.9.0",
-    "gatsby-remark-smartypants": "^5.9.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.1",
+    "@notionhq/client": "^2.2.4",
+    "gatsby": "^5.9.0",
+    "gatsby-plugin-advanced-sitemap": "^2.1.0",
+    "gatsby-plugin-google-analytics": "^5.9.0",
+    "gatsby-plugin-image": "^3.9.0",
+    "gatsby-plugin-manifest": "^5.9.0",
+    "gatsby-plugin-offline": "^6.9.0",
+    "gatsby-plugin-react-helmet": "^6.9.0",
+    "gatsby-plugin-robots-txt": "^1.8.0",
+    "gatsby-plugin-sass": "^6.9.0",
+    "gatsby-plugin-sharp": "^5.9.0",
+    "gatsby-remark-autolink-headers": "^6.9.0",
+    "gatsby-remark-copy-linked-files": "^6.9.0",
+    "gatsby-remark-images": "^7.9.0",
+    "gatsby-remark-prismjs": "^7.9.0",
+    "gatsby-remark-responsive-iframe": "^6.9.0",
+    "gatsby-remark-smartypants": "^6.9.0",
     "gatsby-remark-table-of-contents": "^2.0.0",
-    "gatsby-source-filesystem": "^4.9.1",
-    "gatsby-theme-material-ui": "^5.1.0",
-    "gatsby-transformer-remark": "^5.9.1",
-    "gatsby-transformer-sharp": "^4.9.0",
-    "notion-markdownify": "^0.0.10",
-    "prismjs": "^1.24.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "gatsby-source-filesystem": "^5.9.0",
+    "gatsby-theme-material-ui": "^5.3.0",
+    "gatsby-transformer-remark": "^6.9.0",
+    "gatsby-transformer-sharp": "^5.9.0",
+    "notion-markdownify": "^0.1.0",
+    "prismjs": "^1.29.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-rotating-text": "^1.4.1",
-    "sass": "^1.43.4",
+    "sass": "^1.62.0",
     "typeface-montserrat": "^1.1.13"
   },
   "devDependencies": {
-    "@babel/types": "^7.21.2",
-    "gh-pages": "^3.2.3",
-    "prettier": "2.2.1"
+    "@babel/types": "^7.21.4",
+    "gh-pages": "^5.0.0",
+    "prettier": "2.8.7"
   },
   "keywords": [
     "gatsby",
@@ -57,6 +57,7 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "deploy": "gatsby clean && gatsby build && gh-pages -d public",
     "start": "npm run develop",
+    "fetch": "node fetch-posts.js",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
